--- a/views/tag.html
+++ b/views/tag.html
@@ -10,6 +10,8 @@
   
     <form action="/api/posts/uploadFile" enctype="multipart/form-data" method="post">
       <input type="file" name="img">
+      <input type="text" name="description">
+      <input type="hidden" name="userID" value="hana22">
       <button type="submit" class="btn btn-primary">Upload</button>
   </form>
 </body>
